# ml-metadata

./: .bazelrc  .gitignore  404.html  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  RELEASE.md  WORKSPACE  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  setup.py  test_constraints.txt
.github/reusable-build/: action.yml
.github/workflows/: build.yml  cd-docs.yml  test.yml
docs/: index.md
docs/api/mlmd/: mlmd.md
docs/api/mlmd.proto/: mlmd.proto.md
g3doc/: get_started.md  index.md
g3doc/api/: metadata_store.md
g3doc/api/mlmd/: index.md  root.md
g3doc/api/mlmd.errors/: mlmd.errors.md  root.md
g3doc/api/mlmd.proto/: index.md  mlmd.proto.md
g3doc/stylesheets/: extra.css
ml_metadata/: .bazelversion  BUILD  __init__.py  build_pip_package.sh  errors.py  libmysqlclient.BUILD  libmysqlclient.WORKSPACE  ml_metadata.bzl  move_generated_files.sh  mysql_configure.bzl  postgres.BUILD  postgresql.BUILD  postgresql.WORKSPACE  py.typed  repo.bzl  utils.bzl  version.py  version_check.bzl  workspace.bzl
ml_metadata/metadata_store/: BUILD  __init__.py  conftest.py  constants.h  list_operation_query_helper.cc  list_operation_query_helper.h  list_operation_query_helper_test.cc  list_operation_util.cc  list_operation_util.h  metadata_access_object.cc  metadata_access_object.h  metadata_access_object_factory.cc  metadata_access_object_factory.h  metadata_access_object_factory_test.cc  metadata_access_object_test.cc  metadata_access_object_test.h  metadata_source.cc  metadata_source.h  metadata_source_test.cc  metadata_source_test_suite.cc  metadata_source_test_suite.h  metadata_store.cc  metadata_store.go  metadata_store.h  metadata_store.py  metadata_store_factory.cc  metadata_store_factory.h  metadata_store_factory_test.cc  metadata_store_go_swig.cc  metadata_store_go_wrap.go  metadata_store_serialized.i  metadata_store_server_main.cc  metadata_store_service_impl.cc  metadata_store_service_impl.h  metadata_store_service_interface.h  metadata_store_test.cc  metadata_store_test.go  metadata_store_test.py  metadata_store_test_suite.cc  metadata_store_test_suite.h  (+54 more)
ml_metadata/metadata_store/pywrap/: BUILD  __init__.py  metadata_store_extension.cc
ml_metadata/proto/: BUILD  __init__.py  metadata_source.proto  metadata_store.proto  metadata_store_service.proto  metadata_store_service_pb2_grpc.py
ml_metadata/proto/testing/: BUILD  mock.proto
ml_metadata/query/: BUILD  filter_query_ast_resolver.cc  filter_query_ast_resolver.h  filter_query_ast_resolver_test.cc  filter_query_builder.cc  filter_query_builder.h  filter_query_builder_test.cc
ml_metadata/simple_types/: BUILD  simple_types_constants.cc  simple_types_constants.h
ml_metadata/simple_types/proto/: BUILD  simple_types.proto
ml_metadata/tools/dev_debug/: Dockerfile
ml_metadata/tools/docker_build/: Dockerfile.manylinux2010  build_manylinux.sh
ml_metadata/tools/docker_server/: Dockerfile  README.md  build_docker_image.sh
ml_metadata/tools/documentation/: build_docs.py
ml_metadata/tools/mlmd_bench/: BUILD  README.md  benchmark.cc  benchmark.h  benchmark_test.cc  config.pbtxt  fill_context_edges_workload.cc  fill_context_edges_workload.h  fill_context_edges_workload_test.cc  fill_events_workload.cc  fill_events_workload.h  fill_events_workload_test.cc  fill_nodes_workload.cc  fill_nodes_workload.h  fill_nodes_workload_test.cc  fill_types_workload.cc  fill_types_workload.h  fill_types_workload_test.cc  mlmd_bench.cc  mlmd_bench_main.cc  output.pbtxt  read_events_workload.cc  read_events_workload.h  read_events_workload_test.cc  read_nodes_by_properties_workload.cc  read_nodes_by_properties_workload.h  read_nodes_by_properties_workload_test.cc  read_nodes_via_context_edges_workload.cc  read_nodes_via_context_edges_workload.h  read_nodes_via_context_edges_workload_test.cc  read_types_workload.cc  read_types_workload.h  read_types_workload_test.cc  stats.cc  stats.h  stats_test.cc  thread_runner.cc  thread_runner.h  thread_runner_test.cc  util.cc  (+4 more)
ml_metadata/tools/mlmd_bench/proto/: BUILD  mlmd_bench.proto
ml_metadata/tools/mlmd_resolver/: BUILD  metadata_resolver.py  metadata_resolver_test.py  metadata_resolver_utils.py
ml_metadata/util/: BUILD  field_mask_utils.cc  field_mask_utils.h  field_mask_utils_test.cc  metadata_source_query_config.cc  metadata_source_query_config.h  metadata_source_query_config_test.cc  record_parsing_utils.cc  record_parsing_utils.h  record_parsing_utils_test.cc  return_utils.h  status_utils.cc  status_utils.h  struct_utils.cc  struct_utils.h  struct_utils_test.cc
search/: search_index.json
(+3 files in other folders)
