bazel_dep(name = "abseil-cpp", version = "20240116.2")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "glog", version = "0.7.1")
bazel_dep(name = "grpc", version = "1.63.1")
bazel_dep(name = "protobuf", version = "3.19.2")
bazel_dep(name = "re2", version = "2021-09-01")
# bazel_dep(name = "rules_cc", version = "0.0.8")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "rules_go", version = "0.48.1")
bazel_dep(name = "rules_proto_grpc_cpp", version = "5.0.0-alpha2")

####################
# Dev dependencies #
####################
bazel_dep(name = "googletest", version = "1.14.0", dev_dependency = True)
