# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
  "setuptools",
  "wheel",
  # Required for using org_tensorflow bazel repository.
  "numpy~=1.22.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pep8 naming
    "N",
    # pydocstyle
    "D",
    # annotations
    "ANN",
    # debugger
    "T10",
    # flake8-pytest
    "PT",
    # flake8-return
    "RET",
    # flake8-unused-arguments
    "ARG",
    # flake8-fixme
    "FIX",
    # flake8-eradicate
    "ERA",
    # pandas-vet
    "PD",
    # numpy-specific rules
    "NPY",
]
ignore = [
    "D104", # Missing docstring in public package
    "D100", # Missing docstring in public module
    "D211", # No blank line before class
    "D213", # Multiline summary second line
    "PD901", # Avoid using 'df' for pandas dataframes. Perfectly fine in functions with limited scope
    "ANN201", # Missing return type annotation for public function (makes no sense for NoneType return types...)
    "ANN101", # Missing type annotation for `self`
    "ANN204", # Missing return type annotation for special method
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "D105", # Missing docstring in magic method
    "D203", # 1 blank line before after class docstring
    "D204", # 1 blank line required after class docstring
    "D413", # 1 blank line after parameters
    "SIM108", # Simplify if/else to one line; not always clearer
    "D206", # Advised to disable by ruff-format
    "E501", # Advised to disable by ruff-format
    "W191", # Advised to disable by ruff-format
    "N802", # Function name should be lowercase; unittest uses mixed case
    "D107", # Missing docstring in `__init__`

    # These are issues which remain to be fixed
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D401", # First line of docstring should be in imperative mood
    "D404", # First word of the docstring should not be "This"
    "ANN001", # Missing type annotation for function argument
    "ANN202", # Missing return type for private function
    "B024", # <class> is an abstract base class,  but it has no abstract methods
    "FIX002", # Line contains TODO, consider resolving the issue
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "UP008", # Use `super()` instead of `super(__class__, self)`
    "SIM102", # Use a single `if` statement instead of nested `if` statements
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # Unused import
]
"*_test.py" = [
    "ANN001", # Type annotations aren't needed for tests; these are fixtures or parametrizations
    "PT009", # Use a regular `assert` instead of a unittest-style `assertEqual`
    "PT027", # Use `pytest.raises` instead of unittest-style `assertRaisesRegex`

    # Missing docstrings; probably want to fill these out for tests. For now, we just disable
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method

]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.isort]
profile = "black"
